Modified excluded packages

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,7 @@
 global-include *.txt *.py
-global-exclude venv tests
+global-exclude venv tests __pycache__ supermemo2.egg-info
+
+prune tests*
+prune venv
+prune supermemo2.egg-info
+prune __pycache__
