--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,4 @@
-attrs==19.3.0
-bleach==3.1.5
-certifi==2020.6.20
-chardet==3.0.4
-colorama==0.4.3
-coverage==5.2
-docutils==0.16
-idna==2.10
-importlib-metadata==1.7.0
-keyring==21.2.1
-more-itertools==8.4.0
-packaging==20.4
-pkginfo==1.5.0.1
-pluggy==0.13.1
-py==1.9.0
-Pygments==2.6.1
-pyparsing==2.4.7
-pytest==5.4.3
-pytest-cov==2.10.0
-readme-renderer==26.0
-requests==2.24.0
-requests-toolbelt==0.9.1
-rfc3986==1.4.0
-six==1.15.0
-tqdm==4.47.0
-twine==3.2.0
-urllib3==1.25.9
-wcwidth==0.2.5
-webencodings==0.5.1
-zipp==3.1.0
+pytest==6.2.1
+pytest-cov==2.10.1
+tox==3.20.1
+
