--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,7 +19,4 @@ jobs:
           pytest --cov=./supermemo2 --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          fail_ci_if_error: true
+        run: bash <(curl -s https://codecov.io/bash)
