--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,4 +19,5 @@ jobs:
           pytest --cov=./supermemo2 --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
-        run: bash <(curl -s https://codecov.io/bash)
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
