--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           pip install pytest
           pip install pytest-cov
-          pytest --cov=/home/runner/work/SuperMemo2/SuperMemo2/supermemo2 --cov-report=xml
+          pytest --cov=/home/runner/work/SuperMemo2/SuperMemo2/supermemo2 tests --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
