--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -14,9 +14,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Generate coverage report
         run: |
-          pip install pytest
-          pip install pytest-cov
-          pytest --cov=/home/runner/work/SuperMemo2/SuperMemo2/supermemo2 tests --cov-report=xml
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+          pytest --cache-clear --cov=supermemo2 tests/ --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
