--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
-          pytest --cache-clear --cov=/home/runner/work/SuperMemo2/SuperMemo2/supermemo2 /home/runner/work/SuperMemo2/SuperMemo2/tests/ --cov-report=xml
+          pytest --cache-clear --cov=/home/runner/work/SuperMemo2/SuperMemo2/supermemo2 ./tests/ --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
