--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7]
     steps:
       - name: Setup Python
         uses: actions/setup-python@master
@@ -16,7 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
-          pytest --cache-clear --cov=/home/runner/work/SuperMemo2/SuperMemo2/supermemo2 ./tests/ --cov-report=xml
+          pytest --cache-clear --cov=/home/runner/work/SuperMemo2/SuperMemo2/supermemo2 --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
