--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
-          pytest --cache-clear --cov supermemo2 tests/ --cov-report=xml
+          pytest
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
