--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,7 +16,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
-          pytest ./tests/
+          pwd
+          ls
+          pytest tests/
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
