--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -2,7 +2,7 @@ name: Codecov workflow
 on: [push]
 jobs:
   run:
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
