--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -8,8 +8,9 @@ jobs:
         os: [macos-latest]
         python-version: [3.7]
     steps:
+      - uses: actions/checkout@v2
       - name: Setup Python
-        uses: actions/setup-python@master
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
       - name: Generate coverage report
