--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,9 +16,8 @@ jobs:
       - name: Generate coverage report
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-          ls
-          pytest
+          pip install pytest-cov
+          pytest --cov=supermemo2 --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
