--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest-cov
-          pytest --cov --cov-report=xml
+          pytest --cov=supermemo2 --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
