--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
           python-version: '3.x'
       - name: Generate coverage report
         run: |
+          export PYTHONPATH=`pwd`
           python -m pip install --upgrade pip
           pip install pytest-cov
           pytest --cov=supermemo2 --cov-report=xml
