--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+          PYTHONPATH: /home/runner/work/SuperMemo2/SuperMemo2
       - name: Generate coverage report
         run: |
-          export PYTHONPATH=`pwd`
           python -m pip install --upgrade pip
           pip install pytest-cov
           pytest --cov=supermemo2 --cov-report=xml
