--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.x'
       - name: Generate coverage report
         run: |
-          echo "::set-env name=PYTHONPATH::home/runner/work/SuperMemo2"
+          echo "home/runner/work/SuperMemo2" >> $PYTHONPATH
           python -m pip install --upgrade pip
           pip install pytest-cov
           pytest --cov=supermemo2 --cov-report=xml
