--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,28 @@ on:
   pull_request:
     branches: ["master"]
 jobs:
-  build:
+  build_3.5+:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Generate coverage report
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest-cov
+          pytest --cov=supermemo2
+  build_3.4:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.0, 3.1, 3.2, 3.3, 3.4]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
