--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: ["master"]
 jobs:
-  build_3.5+:
+  build_3.5_plus:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
