--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Generate coverage report
         run: |
           python -m pip install --upgrade pip
-          pip install pytest-cov
-          pytest --cov=supermemo2
+          pip install pytest
+          pytest
   build_lower_threes:
     runs-on: windows-latest
     strategy:
@@ -36,8 +36,8 @@ jobs:
       - name: Generate coverage report
         run: |
           python -m pip install --upgrade pip
-          pip install pytest-cov
-          pytest --cov=supermemo2
+          pip install pytest
+          pytest
   upload_coverage:
     runs-on: macos-latest
     steps:
