--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.0, 3.1, 3.2, 3.3, 3.4]
+        python-version: [3.4]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
@@ -35,7 +35,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Generate coverage report
         run: |
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           pip install pytest
           pytest
   upload_coverage:
