--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: ["master"]
 jobs:
-  build_three_five_plus:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -20,22 +20,6 @@ jobs:
       - name: Generate coverage report
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
-          pytest
-  build_lower_threes:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: [3.4]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Generate coverage report
-        run: |
-          python3 -m pip install --upgrade pip
           pip install pytest
           pytest
   upload_coverage:
