--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Generate coverage report
         run: |
           python -m pip install --upgrade pip
-          pip install pytest-cov
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pytest --cov=supermemo2 --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v4
